--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             </ul>
         </div>
     </nav>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam voluptatum asperiores commodi tempora aliquid nesciunt repudiandae dolorem voluptate soluta sint perferendis iste sapiente, consequatur suscipit quod. Fugit fugiat quibusdam exercitationem.</p>
     <section class="container-fluid px-0">
         <div class="row align-items-center">
             <div class="col-lg-6">
